# dream-log

./: .cursorignore  .dockerignore  .env  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  proxy.md  skills-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  manage.py  pyproject.toml  requirements.txt  requirements_deploy.txt
backend-v2/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend-v2/alembic/: env.py  script.py.mako
backend-v2/alembic/versions/: 20260204_1913_a5daccdecb55_add_user_profile_fields_bio_birthday.py  20260206_2316_71174be6e2f5_add_dream_models.py  20260210_0021_5e4784a1b834_optimize_user_insights_schema.py  20260211_1554_5e8f361d7cff_remove_sensory_experience_fields.py  20260211_2231_f97f19cf7a54_update_tag_name_length_to_20.py  20260212_2300_convert_triggers_to_freeform.py  20260212_2400_remove_preset_triggers.py  20260212_2600_add_reflection_answers_to_dream_insights.py  20260214_1500_add_needs_update_to_dream_embeddings.py  20260218_1708_e0987f1391d7_merge_notification_settings_into_single_.py  20260218_2000_update_notification_type_enum.py  20260221_1800_add_ai_image_url_to_dreams.py  20260226_1000_add_community_tables.py  20260226_1200_add_community_groups.py  20260226_1300_add_foryou_index.py  20260226_1400_add_chat_messages.py  20260226_1500_add_direct_messages.py  20260227_1000_add_search_indexes.py  20260227_1100_add_search_history.py  20260227_1200_add_heat_score_to_dreams.py  20260228_1100_drop_chat_messages.py  20260228_1200_add_comment_downvote_count.py  20260302_1500_add_feature_mode_fields_to_dreams.py
backend-v2/app/: __init__.py  main.py
backend-v2/app/api/: community.py  dreams.py  exploration.py  insights.py  notifications.py  oauth.py  user.py
backend-v2/app/config/: __init__.py  ai_models.py  featured.py
backend-v2/app/constants/: dreams.py  emotions.py  sleep.py
backend-v2/app/core/: arq_app.py  config.py  database.py  deps.py  sse_manager.py
backend-v2/app/models/: __init__.py  community.py  dream.py  dream_analysis.py  dream_embedding.py  dream_emotion.py  dream_insight.py  dream_relation.py  dream_symbol.py  dream_tag.py  dream_trigger.py  dream_type.py  enums.py  notification.py  search_history.py  token_blacklist.py  user.py  user_insight.py
backend-v2/app/prompts/: __init__.py  dream_analysis.py  insight_generation.py
backend-v2/app/schemas/: __init__.py  auth.py  dreams.py  notifications.py  user.py
backend-v2/app/services/: ai_service.py  auth_service.py  community_service.py  dm_service.py  dream_service.py  email_verification_service.py  exploration_service.py  insight_service.py  notification_service.py  oss_service.py  password_service.py  similarity_service.py  user_service.py  xfyun_speech_service.py
backend-v2/app/tasks/: dream_analysis_tasks.py  email_tasks.py  featured_tasks.py  insight_tasks.py
backend-v2/scripts/: __init__.py  dev.py
backend-v2/scripts/articles/: import_articles.py
backend-v2/scripts/symbols/: README.md
backend-v2/src/content_sources/: nightmare_guide.md
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  20260203_2154_ce115717fa40_add_auth_tables_users_and_token_.py  20260209_1012_c352eb6f8093_add_sleep_start_time_field.py  20260209_2243_180a9bcb1ac9_remove_description_and_icon_emoji_from_.py  20260209_2352_154a136b77b6_remove_contrast_thematic_from_relation_.py  20260210_1354_636fe11381cf_add_notifications_table.py  20260212_2500_drop_dream_emotions.py  20260212_2700_drop_dream_analysis_tasks.py  20260213_1400_remove_emotion_conflict_index_from_dreams.py  20260215_1000_ensure_content_embedding_column.py  20260218_1543_2f3162600e8a_add_multi_dimensional_insight_types.py  20260222_1200_add_exploration_tables.py  20260226_1200_add_community_groups.py  20260228_1000_add_share_count_to_dreams.py  20260301_1200_add_media_url_to_direct_messages.py  20260309_1000_ensure_feature_mode_columns_on_dreams.py  20260309_1100_add_community_creation_applications.py  20260309_1200_add_user_asset_visibility_settings.py  20260310_1500_update_official_communities_to_english.py  20260310_1600_update_fun_and_parallel_communities_to_english.py  20260311_1600_add_user_preferred_locale.py  20260313_2032_4b7d4998c631_add_quota_usage_tables.py  20260315_1624_123e19d8755e_add_user_subscriptions.py  20260315_1700_drop_embeddings_used_from_user_quota_usage.py  20260316_0001_add_stripe_webhook_events.py  20260316_0002_add_subscription_pending_update_fields.py  20260316_0003_add_stripe_webhook_event_processing_fields.py  20260316_0004_add_subscription_status_reason.py  20260401_0001_add_passkey_credentials.py  20260501_0001_add_wechat_oauth_fields.py
backend/app/: cli.py  main.py
backend/app/api/: __init__.py  auth.py  billing.py  community.py  dm.py  dreams.py  insights.py  notifications.py  oauth.py  passkey.py  quota.py  user.py  voice_ws.py
backend/app/config/: ai_models.py  insight_config.py  subscription.py
backend/app/constants/: __init__.py  dreams.py
backend/app/core/: arq_app.py  config.py  deps.py  redis.py
backend/app/models/: __init__.py  community_group.py  dm.py  dream.py  dream_attachment.py  dream_relation.py  dream_tag.py  enums.py  exploration.py  notification.py  passkey_credential.py  quota_usage_log.py  stripe_webhook_event.py  subscription.py  usage_quota.py  user.py
backend/app/prompts/: dream_analysis.py  dream_content_assist.py  insight_generation.py
backend/app/schemas/: __init__.py  auth.py  community.py  dm.py  dreams.py  exploration.py  insights.py  (+4 more)
backend/config/: __init__.py  asgi.py  celery.py  celery_app.py  celery_performance_config.py  env_config.py  env_loader.py  env_manager.py  middleware.py  urls.py  wsgi.py
backend/scripts/: __init__.py  start.sh  start_worker.py  stripe_local_webhook.ps1  stripe_local_webhook.sh  stripe_trigger_test_events.ps1  stripe_trigger_test_events.sh
backend/src/: Cloud Speech.json
backend/tests/: test_cli.py  test_config.py  test_start_worker.py
legacy/backend/: .dockerignore  Dockerfile  manage.py  pyproject.toml
(+857 files in other folders)
