[project]
name = "dreamlog-backend-v2"
version = "2.0.0"
description = "Dream Log Backend - FastAPI"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Proprietary" }
authors = [{ name = "warpoint" }]

dependencies = [
    # Web 框架
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    
    # 数据库 ORM
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    
    # 异步数据库驱动
    "asyncpg>=0.30.0",  # PostgreSQL
    
    # 数据验证
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.2.0",
    
    # 认证
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    
    # 缓存
    "redis>=5.2.1",
    
    # 任务队列
    "arq>=0.26.1",
    
    # 邮件发送
    "aiosmtplib>=3.0.2",
    
    # HTTP 客户端
    "httpx>=0.28.1",
    
    # AI 服务
    "openai>=1.60.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    
    # 阿里云 OSS
    "oss2>=2.18.0",
    "aliyun-python-sdk-core>=2.14.0",
    "aliyun-python-sdk-sts>=3.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
    "mypy>=1.14.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langgraph.*"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
