[project]
name = "dreamlog-backend"
version = "2.0.0"
description = "Dream Log Backend - FastAPI"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Proprietary" }
authors = [{ name = "warpoint" }]

dependencies = [
    # Web 框架
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    # 数据库 ORM
    "sqlalchemy",
    "alembic",
    # 异步数据库驱动
    "asyncpg",
    # 数据验证
    "pydantic",
    "pydantic-settings",
    "email-validator",
    # 认证
    "python-jose[cryptography]",
    "bcrypt",
    # 缓存
    "redis",
    # 任务队列
    "arq",
    # 邮件发送
    "aiosmtplib",
    # HTTP 客户端
    "httpx",
    # AI 服务
    "langchain-openai",
    "langchain-openrouter",
    "langchain",
    # pgvector
    "pgvector",
    # Google Cloud Speech-to-Text
    "google-cloud-speech>=2.31.0",
    # WebSocket 客户端
    "websockets",
    # 阿里云 OSS
    "oss2",
    "aliyun-python-sdk-core",
    "aliyun-python-sdk-sts",
    # Stripe
    "stripe",
]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
    "mypy>=1.14.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_core.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_openai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_openrouter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.cloud.*"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
