[project]
name = "DreamLog-backend"
version = "0.1.0"
description = "DreamLog backend"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "warpoint" }]

# 生成依赖
dependencies = [
    # Web 框架
    "django>=5.2.6",
    # 处理跨域请求
    "django-cors-headers>=4.9.0",
    # 读取 .env 配置文件，管理环境变量
    "django-environ>=0.12.0",
    # 对 DRF 的 API 数据进行过滤
    "django-filter>=25.1",
    # Django 的 REST API 框架
    "djangorestframework>=3.16.1",
    # JWT 验证，API 授权
    "djangorestframework-simplejwt>=5.5.1",
    # 将 Redis 与 Django 缓存结合，用于缓存数据
    "django-redis>=6.0.0",
    # DJango时区
    "django-timezone-field>=7.1",
    # 异步 & WebSocket
    "channels>=4.3.1",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    # Celery 任务队列
    "celery>=5.5.3",
    "django-celery-beat>=2.8.1",
    # 数据库
    "mysqlclient>=2.2.7",
    "psycopg>=3.2.10",
    # 云服务
    "oss2>=2.19.1",
    "aliyun-python-sdk-sts>=3.1.3",
    # AI服务
    "langchain>=0.3.27",
    "langgraph>=0.6.7",
    "langchain-chroma>=0.2.6",
    "langchain-voyageai>=0.1.7",
    "langchain-tavily>=0.2.11",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.33",
    "firecrawl-py>=4.3.6",

    # 其他
    "beautifulsoup4>=4.13.5",
]

# 开发依赖
[dependency-groups]
dev = [
    "django-debug-toolbar>=6.0.0",
    "pytest-django>=4.11.1",
]